src/test/compile-fail/dead-code-be.rs
// -*- rust -*-

fn f(str caller) {
  log caller;
}

fn main() {
  be f("main");
  log "Paul is dead";
}

